--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body{
     margin: auto;
     display: flex;
     flex-direction: column;
-    height: 700px;
+    height: 650px;
     width: 450px;
     align-items: center;
     text-align: center;
@@ -102,4 +102,11 @@ body{
 .link-info-container .tact
 {
     color:#cc2366;
+}
+
+@media screen and (max-width:740px) {
+    .information-container
+    {
+        height: 500px;
+    }
 }
