--- a/index.css
+++ b/index.css
@@ -107,6 +107,10 @@ body{
 @media screen and (max-width:740px) {
     .information-container
     {
-        width: 400px;
+        background-color: none;
     }
+    .web-container
+{
+    background-color: white;
+}
 }
